@@ -1,6 +1,12 @@
 2007-09-26  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-directory-async.c:
+        * libnautilus-private/nautilus-directory-private.h:
+	Read mime list using gio
+
+2007-09-26  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-directory-async.c:
 	Read .hidden using gio.
 
 2007-09-25  Alexander Larsson  <alexl@redhat.com>
